# VISUAL_M4MRDVS

./: .gitignore  CMakeLists.txt  Makefile  readme.md  readme.txt
CameraSDK/: README.md
include/: config.h  func.h  sdk_api.h
src/: ft_checkstate.cpp  ft_utils.cpp  main.cpp
